Closed Bug 1294563 Opened 9 years ago Closed 9 years ago

Yield before compacting GC if we are incremental

Categories

(Core :: JavaScript: GC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox51 --- fixed
firefox52 --- fixed

People

(Reporter: terrence, Assigned: terrence)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file, 2 obsolete files)

This got broken when we added a finalize state. We're now yielding at the end of sweeping... right before the zero-length finalize slices instead of before the long compacting slices. Should be trivial to fix.
I think this is probably not necessary because sweepZones should be relatively fast. Probably better to err on the size of low-latency though.
Attachment #8793046 - Flags: review?(jcoppeard)
Looks like we don't even visit the thing for sweeping, so the final shutdown crashes in the pre-barrier as we've already torn down the heap.
Let's just take out all the GC primitives since the map is not managed by the GC.
Attachment #8793046 - Attachment is obsolete: true
Attachment #8793046 - Flags: review?(jcoppeard)
Attachment #8793121 - Flags: review?(nicolas.b.pierron)
(In reply to Terrence Cole [:terrence] from comment #3) The above looks like a fine patch but I think you meant to open a different bug for it.
Flags: needinfo?(terrence.d.cole)
Comment on attachment 8793121 [details] [diff] [review] no_need_for_rekeyable_on_vmfunction-v1.diff Review of attachment 8793121 [details] [diff] [review]: ----------------------------------------------------------------- I reviewed a similar patch as part of Bug 813683, I guess this is not the right attachment for this bug.
Attachment #8793121 - Flags: review?(nicolas.b.pierron)
Yeah, wow, I totally crossed the two bugs I was working on yesterday. :-(
Flags: needinfo?(terrence.d.cole)
I did not mean to overwrite the original patch in this bug.
Attachment #8793121 - Attachment is obsolete: true
Attachment #8793373 - Flags: review?(jcoppeard)
Comment on attachment 8793373 [details] [diff] [review] fix_pre_compacting_interrupt-v0.diff Review of attachment 8793373 [details] [diff] [review]: ----------------------------------------------------------------- Yeah this looks good.
Attachment #8793373 - Flags: review?(jcoppeard) → review+
Pushed by tcole@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/755e16dfd05a Fix the pre-compacting interrupt's position; r=jonco
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Keywords: regression
Hi :jonco, Since this bug is a regression and also affects 51, do you consider to uplift this for 51 if this patch is not too risky?
Flags: needinfo?(jcoppeard)
Comment on attachment 8793373 [details] [diff] [review] fix_pre_compacting_interrupt-v0.diff Approval Request Comment [Feature/regressing bug #]: Bug 1249367 [User impact if declined]: Possible jank due to garbage collection. [Describe test coverage new/current, TreeHerder]: On m-c since 23rd September. [Risks and why]: Low. [String/UUID change made/needed]: None.
Flags: needinfo?(jcoppeard)
Attachment #8793373 - Flags: approval-mozilla-aurora?
Comment on attachment 8793373 [details] [diff] [review] fix_pre_compacting_interrupt-v0.diff Fix a regression related to GC. Take it in 51 aurora.
Attachment #8793373 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: