Bug 1294563 - Fix the pre-compacting interrupt's position; r=jonco